                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.5


  *) [TS-1942] Remove username.cache configs, they are obsolete and long gone.


  Changes with Apache Traffic Server 3.3.4


  *) [TS-1940] HostDB gets reinitialized on startup.

  *) [TS-1941] Make Linux native-AIO build cleanly.

  *) [TS-1938] Remove unnecessary thread_id() wrapper in reclaimable freelist.
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  Changes with Apache Traffic Server 3.3.3 (never released)


  *) [TS-1936] Make traffic_logstats honor the log-directory as intended.

  *) [TS-1937] Prevent assert on SSL forward proxy connect.

  *) [TS-1907] Using the "ipv6" option for port configuration cancels the "ssl" option.

  *) [TS-1927] Make ats_base64_decode able to handle the URL variant

  *) [TS-1207] Move cacheurl plugin out of experimental

  *) [TS-1857] On CentOS the Lua plugin is built whether Lua is found or not.

  *) [TS-1492]  Prevent net-throttling from locking out the health checks
   from traffic_cop.

  *) [TS-1827] Make combo_handler be enabled via remap.config, and
   various other cleanup fixes. Author: Conan Wang and Leif.

  *) [TS-1932] Use a more modern tar format so asf-dist can handle
   file paths longer that 99 bytes

  *) [TS-1891] Add double-free checking for reclaimable freelist
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1926] Require Lua v5.1, by checking for lua_getfenv(). This is
   necessary since we are incompatible with Lua v5.2 (for now).

  *) [TS-1921] Fix reclaimable freelist getting stuck in infinite loop.
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1824] TSHttpTxnPushedRespHdrBytesGet() takes an int argument in the
   implementation, whereas the prototype does not have this.

  *) [TS-1928] False warning when setting log rotation size to exactly 10.

  *) [TS-1812] Remove obsolete syslog_thr_init calls.
