@@ -1,9 +1,0 @@
-##############################################################################
-# Plugin Database File
-#
-# DO NOT EDIT, FILE IS MACHINE GENERATED
-#
-# Comments start with a '#' and continue to the end of the line
-# Blank lines are ignored
-#
-##############################################################################
