@@ -2,6 +2,8 @@
   Changes with Apache Traffic Server 3.3.5
 
 
+  *) [TS-1948] Remove obsolete TSPluginLicenseRequired and plugin.db.
+
   *) [TS-1942] Remove username.cache configs, they are obsolete and long gone.
 
 
